Update Account service model and operations
