# accounts/src/main/java/com/jorge/accounts/model/Account.java
@@ -9,8 +9,8 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 
-@Builder
-@Data
+@Getter
+@Setter
 @NoArgsConstructor
 @AllArgsConstructor
 @Document(collection = "accounts")
@@ -18,38 +18,17 @@ public class Account {
     @Id
     private String id;
     private String accountNumber;
-    private AccountType accountType;
-    private CurrencyType currencyType;
     private BigDecimal balance;
-    private AccountStatus status;
-    private LocalDateTime createdAt;
     private String customerDni;
+    private AccountType accountType;
+    private LocalDateTime createdAt;
 
     private Integer movementsThisMonth;
     private Integer maxMovementsFeeFreeThisMonth;
     private Boolean isCommissionFeeActive;
     private BigDecimal movementCommissionFee;
 
-    //SavingsAccount fields
-    private Integer monthlyMovementsLimit;
-
-    //CheckingAccount fields
-    private BigDecimal maintenanceFee;
-    private List<String> holders;
-    private List<String> authorizedSigners;
-
-    //FixedTerm fields
-    private LocalDate allowedWithdrawal;
-
     public enum AccountType{
         SAVINGS, CHECKING, FIXED_TERM
-    }
-
-    public enum AccountStatus{
-        ACTIVE, CLOSED, BLOCKED
-    }
-
-    public enum CurrencyType{
-        PEN, USD
     }
 }
