# accounts/src/main/java/com/jorge/accounts/webclient/model/TransactionRequest.java
@@ -11,15 +11,12 @@ import java.math.BigDecimal;
 @AllArgsConstructor
 public class TransactionRequest {
     private String accountNumber;
-    //Credit field
-    private String creditId;
-
     private BigDecimal fee;
     private TransactionType transactionType;
-    private CurrencyType currencyType;
     private BigDecimal amount;
-    private TransactionStatus status;
     private String description;
+
+    private String relatedCreditId;
 
     public enum TransactionType {
         DEBIT,
@@ -28,19 +25,7 @@ public class TransactionRequest {
         WITHDRAWAL,
         CREDIT_PAYMENT,
         CREDIT_DEPOSIT,
-        CREDIT_CARD_CONSUMPTION,
         CREDIT_CARD_PAYMENT,
-        TRANSACTION_FEE,
         MAINTENANCE_FEE
-    }
-
-    public enum TransactionStatus {
-        PENDING,
-        COMPLETED,
-        FAILED
-    }
-
-    public enum CurrencyType{
-        PEN, USD
     }
 }
